Bug 814430 - Shutdown network on profile-change-net-teardown. r=mcmanus